# smart-recipe-finder-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: backend-quality-gate.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_auth_tables_and_recipe_moderation.py  a8459ad75d76_add_notifications_modlog_superadmin.py  b7c8d9e0f1a2_add_google_oauth_support.py  c3d4e5f6a7b8_add_denorm_fields_to_moderation_logs.py  d5e6f7a8b9c0_add_display_name_and_avatar_url.py  e6f7a8b9c0d1_add_description_to_recipes_and_drafts.py  f7a8b9c0d1e2_add_thumbnail_urls_to_recipes.py  g8a9b0c1d2e3_merge_description_and_thumbnails.py  h9b0c1d2e3f4_add_recipe_tags.py  i0c1d2e3f4g5_add_recipe_favorites.py  j1d2e3f4g5h6_add_ratings_comments_engagement.py  k2e3f4g5h6i7_add_smtp_email_fields.py  l3f4g5h6i7j8_add_pending_email_fields.py  m4g5h6i7j8k9_add_user_follows.py  n5h6i7j8k9l0_add_user_language.py  o6i7j8k9l0m1_add_from_user_id_to_notifications.py  p7j8k9l0m1n2_convert_strings_to_enums.py  q8k9l0m1n2o3_normalise_cuisines.py  r9l0m1n2o3p4_normalise_recipe_images.py  s0m1n2o3p4q5_normalise_ingredients.py  t1n2o3p4q5r6_drop_amount_unit_from_recipe_ingredients.py
app/: main.py
app/api/: deps.py
app/core/: cache.py  config.py  exceptions.py  health.py  rate_limit.py  s3_client.py  security.py  single_flight.py  vector_store.py  ws_manager.py
app/db/: session.py
app/models/: __init__.py  cuisine.py  email_notification_preference.py  enums.py  ingredient.py  moderation_log.py  notification.py  recipe.py  recipe_comment.py  recipe_comment_report.py  recipe_draft.py  recipe_favorite.py  recipe_image.py  recipe_ingredient.py  recipe_rating.py  recipe_tags.py  refresh_token.py  user.py  user_follow.py
app/schemas/: __init__.py  recipe.py  user.py  (+1 more)
scripts/: benchmark_search.py  create_admin.py  enrich_recipe_dataset.py  evaluate.py  recompress_recipe_images.py  seed_db.py
tests/: conftest.py  testing_config.py
(+113 files in other folders)
